#135: Allow queries with no particular sort order